crates/specline-mcp/tests/snapshots/snapshots__server_discover.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: "specline_mcp::discover_result()"
---
{
  "capabilities": {
    "tools": {
      "listChanged": false
    }
  },
  "instructions": "Specline stores everything about a software project except the code. Call `specline_context` first to orient. Pass the `session_id` your host gave you on every call, so writes are attributed to this conversation. Before creating a project, call `specline_projects` and confirm with the human.",
  "protocolVersions": [
    "[date]",
    "[date]",
    "[date]",
    "[date]"
  ],
  "serverInfo": {
    "name": "specline",
    "title": "Specline",
    "version": "[semver]"
  }
}
