crates/specline-mcp/tests/snapshots/snapshots__specline_context.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "# Harbour (harbour)\nstatus: active · 1 open task(s), 0 urgent, 0 blocked · 0 open question(s)\n\n## Next\n- **Dedupe usage events by idempotency key** `HARB-1` — in no phase · today\n\n## Specs\n- Usage metering [draft · spec] [id]\n\n## Recently\n- [date] — created task “Dedupe usage events by idempotency key” (claude)\n- [date] — created spec “Usage metering” (claude)\n- [date] — created project “Harbour” (claude)\n\n## Also worth noticing\n- No milestone is active, but there is open work. Consider grouping it under one.\n- Nothing is marked p0 or p1. If something is actually urgent, say so on the task.\n",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "active": [],
    "attention": [],
    "budget_exceeded": false,
    "complete": [],
    "decisions": [],
    "drift": null,
    "environments": [],
    "estimated_tokens": 165,
    "inbox": [],
    "next": [
      "No milestone is active, but there is open work. Consider grouping it under one.",
      "Nothing is marked p0 or p1. If something is actually urgent, say so on the task."
    ],
    "next_up": {
      "blocked": [],
      "ready": [
        {
          "id": "[id]",
          "priority": "p2",
          "reference": "HARB-1",
          "title": "Dedupe usage events by idempotency key",
          "unblocks": 0,
          "why": "in no phase · today"
        }
      ],
      "waiting_on_you": []
    },
    "project": {
      "active_milestone": null,
      "blocked_tasks": 0,
      "id": "[id]",
      "inbox": 0,
      "inbox_oldest_days": null,
      "key": "HARB",
      "milestone_noun": null,
      "name": "Harbour",
      "open_questions": 0,
      "open_tasks": 1,
      "slug": "harbour",
      "status": "active",
      "urgent_tasks": 0
    },
    "projects": [],
    "questions": [],
    "recent": [
      "[date] — created task “Dedupe usage events by idempotency key” (claude)",
      "[date] — created spec “Usage metering” (claude)",
      "[date] — created project “Harbour” (claude)"
    ],
    "session_id": null,
    "specs": [
      {
        "detail": "spec",
        "entity_type": "spec",
        "id": "[id]",
        "label": "Usage metering",
        "status": "draft"
      }
    ],
    "terms": [],
    "truncated": []
  }
}
